test/cases/compile_errors/missing_function_name.zig
fn () void {}

// error
// backend=stage2
// target=native
//
// :1:1: error: missing function name
